# deeplearning4j

./: .appveyor.yml  .cproject  .gitignore  .gitmodules  .project  .scalafmt.conf  .shippable.yml  .travis.yml  404.html  AddingNewOps.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  Deeplearning4J-ETL-UserGuide.md  DskipTests  GITTER_GUIDELINES.md  JCUBLAS.md  Jenkinsfile  LICENSE  LICENSE.txt  LineSentenceIterator.java  NOTICE.txt  PRTEST.md  README.md  README.md~  Rakefile  RaspberryPi2.md  ScalaMain.scala  Test Results - All_in_nd4j-tests.xml  Test Results - ConvolutionLayerSetupTest_testCNNDBNMultiLayer.xml  UnderstandingGraph.md  Untitled0.ipynb  Untitled1.ipynb  VERSION  XX-zh-sentiment_analysis_word2vec.md  XXiris-flower-dataset-tutorial.md  XXsentiment_analysis_word2vec.md  XXspark-ml.md  XXwindows-install.md  (+336 more)
OpenBLAS/: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTORS.md  Changelog.txt  Makefile.arm  Makefile.arm64  Makefile.install  Makefile.power  Makefile.prebuild  Makefile.rule  Makefile.system  Makefile.x86_64  README.md  TargetList.txt  appveyor.yml  c_check  cblas.h  common.h  common_arm.h  common_arm64.h  common_level3.h  common_linux.h  common_macro.h  common_mips64.h  common_param.h  common_power.h  common_stackalloc.h  common_x86.h  common_x86_64.h  cpuid.h  cpuid_arm.c  cpuid_arm64.c  cpuid_mips.c  cpuid_power.c  cpuid_sparc.c  cpuid_x86.c  ctest.c  f_check  getarch.c  (+4 more)
OpenBLAS/benchmark/: asum.c  axpy.c  copy.c  dot.c  gemm.c  gemv.c  scal.c  swap.c  trmm.c  zdot.c
OpenBLAS/cmake/: arch.cmake  c_check.cmake  cc.cmake  export.cmake  f_check.cmake  fc.cmake  lapack.cmake  lapacke.cmake  os.cmake  prebuild.cmake  system.cmake  utils.cmake
OpenBLAS/ctest/: CMakeLists.txt  c_cblas1.c  c_cblas2.c  c_dblas1.c  c_dblat1.f  c_sblas1.c  c_sblat1.f  c_xerbla.c  c_zblas1.c  c_zblas2.c  cin2  cin3  cin3_3m  din2  din3  sin2  sin3  zin2  zin3  zin3_3m
OpenBLAS/exports/: gensymbol
OpenBLAS/include/: f77blas.h  lapacke.h  lapacke_config.h  lapacke_utils.h  openblas_config.h
OpenBLAS/interface/: CMakeLists.txt  asum.c  axpy.c  copy.c  gbmv.c  gemm.c  gemv.c  imatcopy.c  imax.c  nrm2.c  rotg.c  rotmg.c  sbmv.c  scal.c  spmv.c  swap.c  symm.c  symv.c  syr2k.c  syrk.c  tpmv.c  trmv.c  trsm.c  zaxpby.c  zaxpy.c  zdot.c  zgbmv.c  zgemv.c  zger.c  zhbmv.c  zhemv.c  zher.c  zher2.c  zhpmv.c  zhpr.c  zhpr2.c  zimatcopy.c  zrotg.c  zsbmv.c  zscal.c  (+7 more)
OpenBLAS/kernel/: CMakeLists.txt  Makefile.L3  setparam-ref.c
OpenBLAS/lapack/: CMakeLists.txt
OpenBLAS/lapack-netlib/: CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake.in  README  lapack.pc.in  lapack_build.cmake  lapack_testing.py  make.inc.example
OpenBLAS/test/: CMakeLists.txt  dblat1.f  sblat1.f
OpenBLAS/utest/: ctest.h  openblas_utest.h  test_axpy.c  test_dotu.c  test_dsdot.c  test_fork.c  test_rot.c  test_rotmg.c  test_swap.c
blas/: CMakeLists.txt  CMakeLists_REMOTE_32096.txt  Environment.cpp  Environment.h  GraphExecutioner.h  NDArray.h  NDArrayFactory.h  NDArrays.h  NativeBlas.h  NativeOpExcutioner.h  NativeOps.h
blas/cpu/: GraphExecutioner.cpp  NDArray.cpp  NDArray.macro  NDArrayFactory.cpp  NDArrays.cpp  NativeBlas.cpp  NativeOpExcutioner.cpp  NativeOps.cpp
blas/cuda/: NativeBlas.cu  NativeOps.cu
buffer/: CMakeLists.txt  NativeBuffer.cpp  NativeBuffer.h
libnd4j/: .clang-format  .gitignore  AddingNewOps.md  CMakeLists.txt  CMakeLists.txt.armcompute.in  CMakeLists.txt.cpu_features.in  CMakeLists.txt.in  CMakeLists.txt.mkldnn.in  CMakeLists.txt.onednn.in  CMakeLists.txt.vednn.in  CMakeLists.txt.veonednn.in  CMakePresets.json  CMakeSettings.json  Helpers.md  Jenkinsfile  Neanderthal-EPL.txt  NecAurora.md  README.md  RaspberryPi.md  UnderstandingGraph.md  assembly-aurora.xml  assembly-cuda.xml  assembly.xml  build_ve_prerequisites.sh  build_veda.sh  buildnativeoperations.sh  cibuild.sh  copy-flatc-java.sh  flatc-generate.sh  flatproto.txt  generate_deps.py  iOS.md  linuxOnPower.md  macOSx10 (CPU only).md  nano-env.sh  nano_build.sh  perform-release.sh  pi_build.sh  pom.xml  proto.sh  (+12 more)
libnd4j/auto_vectorization/: AutoVectorization.md  auto_vect.py  bigGzipJson.pyx  cython_setup.py  inverted_index.py
libnd4j/blas/: BlasVersionHelper.h  CMakeLists.txt  Environment.cpp  Environment.h  GraphExecutioner.h  NDArray.h  NDArray.hpp  NDArrayFactory.h  NativeOpExcutioner.h  NativeOpExecutioner.h  NativeOps.h
libnd4j/cmake/: BasicSetup.cmake  BuildCPU.cmake  BuildCuda.cmake  CMakePushCheckState.cmake  Ccache.cmake  CheckFortranFunctionExists.cmake  CheckFunctionExists.cmake  CombinationCaching.cmake  CompileMemoryProfiling.cmake  CompilerFlags.cmake  CompilerOptimizations.cmake  CudaConfiguration.cmake  Dependencies.cmake  DuplicateInstantiationDetection.cmake  ExtractInstantiations.cmake  FileConcatenation.cmake  FindARMCOMPUTE.cmake  FindBLAS.cmake  FindCSparse.cmake  FindCUDA.cmake  FindDwarf.cmake  FindGRPC.cmake  FindLAPACK.cmake  FindMKL.cmake  FindPackageHandleStandardArgs.cmake  FindVEDA.cmake  FindVEDNN.cmake  GenCompilation.cmake  InstantiationCache.cmake  InstantiationHelpers.cmake  JNIConfiguration.cmake  MainBuildFlow.cmake  Options.cmake  Platform.cmake  PlatformDetection.cmake  PlatformOptimizations.cmake  PostBuild.cmake  Ppstep.cmake  PrintingUtilities.cmake  ProcessInstantiationBatch.cmake  (+43 more)
libnd4j/dev-docs/: AddingNewOps.md  DebuggingWithTests.md  FuncTraceAllocation.md  Helpers.md  LaunchDims.md  NecAurora.md  RaspberryPi.md  Undefined Symbols.md  iOS.md  profiler-readme.md
libnd4j/include/: ConstMessages.cpp  ConstMessages.h  Makefile  Status.h  buffer.h  build_info.cpp  build_info.cu  build_info.h  cblas.h  cblas_enum_conversion.h  config.h  config.h.in  cuda_launch_config.h  deviceQuery.cpp  dll.h  enum_boilerplate.h  fp16_conversion.hpp  fp16_emu.h  helper_cuda.h  lapacke.h  msvc.h  nd4jmalloc.h  nd4jmemset.h  op_boilerplate.h  op_enums.h  openmp_pragmas.h  optype.h  pairwise_util.h  platform_boilerplate.h  platformmath.h  play.h  pointercast.h  samediff.h  semaphore.h  templatemath.h  util.h  (+2 more)
test/: CMakeLists.txt  MemoryLeakDetectorNewMacros.h  main.cu  tests.md
(+70972 files in other folders)
